--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -29,6 +29,9 @@ main {
 .image {
   background-size: 100%;
   background-position: center;
+  width: 100%;
+  height: 200px;
+  background-image: URL(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
 main .row {
   display: flex;
